# abb-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
demo/: main.cpp
demos/: listNode.cpp  main.cpp
include/: abb.h
include/abb/: abort.h  any.h  block.h  blockFwd.h  block_fwd.h  chain.h  each.h  error.h  errorFwd.h  error_fwd.h  impl.h  inplace.h  island.h  make.h  makeFwd.h  make_fwd.h  partial.h  reply.h  special.h  success.h  successFwd.h  success_fwd.h  successor.h  task.h  und.h  value.h
include/abb/ll/: abortBrick.h  abort_brick.h  abort_point_brick.h  anyBrick.h  any_brick.h  box.h  brick.h  brickCont.h  brickPtr.h  brick_cont.h  brick_ptr.h  brick_runner.h  bridge.h  detachSuccessor.h  eachBrick.h  each_brick.h  errorBrick.h  error_brick.h  implBrick.h  impl_brick.h  makeBrick.h  make_brick.h  pipeBrick.h  pipe_brick.h  proxyBrick.h  pureExitBrick.h  runner.h  store.h  successBrick.h  success_brick.h  successor.h  valueBrick.h  valueTraits.h
include/abb/utils/: alternative.h  bank.h  call.h  callResult.h  callReturn.h  cord.h  debug.h  firewalk.h  integer_sequence.h  invoke.h  noncopyable.h  range.h  seq.h  vault.h
scripts/: buildCoverage.sh  buildMemcheck.sh  runBrokenTests.sh  runHeaderDependencyTest.sh  runHeaderGuardTest.sh  runTests.sh
src/: abort.cpp  abortBrick.cpp  any.cpp  block.cpp  debug.cpp  island.cpp
tests/: abort_point.cpp  any.cpp  chain.cpp  each.cpp  error.cpp  impl.cpp  make.cpp  simplePipe.cpp  success.cpp
tests/broken/: anyOfRangeWithRef.cpp  pipeRef.cpp  successExplicitCtor.cpp
tests/helpers/: base.cpp  base.h  block_mock.h
tests/scripts/: test_broken.sh  test_headerDependency.sh  test_headerGuard.sh
